--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "bluebird": "^2.9.34",
     "debug": "^2.2.0",
     "express": "^4.13.3",
-    "morgan": "^1.6.1",
-    "asyncawait": "^0.7.4"
+    "morgan": "^1.6.1"
   },
   "repository": {
     "type": "git",
